# study-langgraph

./: CLAUDE.md  README.md  StudyPlan.md  main.py  pyproject.toml
.claude/: settings.local.json
src/phase01/: 1.1-example-human-in-the-loop.py  1.1-example-map-reduce.py  1.1-example-minimal.py  1.1-example-multi-agent.py  1.1-langgraph-overview.md  1.2-core-primitives.md  1.3-example-basic-chatbot.py  1.3-example-checkpointing.py  1.3-example-tool-calling.py  1.3-first-graph-quickstart.md
src/phase02/: 2.1-example-dataclass-state.py  2.1-example-input-output-schema.py  2.1-example-messages-state.py  2.1-example-pydantic-state.py  2.1-example-typeddict-state.py  2.1-state-schema-design.md  2.2-example-add-messages-reducer.py  2.2-example-add-unique-reducer.py  2.2-example-annotated-reducer.py  2.2-example-deep-merge-reducer.py  2.2-example-default-reducer.py  2.2-example-keep-max-reducer.py  2.2-example-overwrite.py  2.2-example-parallel-nodes.py  2.2-reducer-mechanism.md  2.3-example-basic-private-state.py  2.3-example-combined-private-io-schema.py  2.3-example-node-level-input-schema.py  2.3-example-rag-pipeline.py  2.3-private-state.md
src/phase03/: 3.1-basic-control-flow.md  3.1-example-command-loop.py  3.1-example-conditional-branching.py  3.1-example-loop.py  3.1-example-multi-tool-agent.py  3.1-example-sequential.py  3.2-advanced-control-flow.md  3.2-example-deferred-node.py  3.2-example-map-reduce.py  3.2-example-parallel-fetch.py  3.2-example-recursion-limit.py  3.2-example-remaining-steps.py  3.3-example-llm-router-V2.py  3.3-example-llm-router.py  (+7 more)
(+176 files in other folders)
